--- a/manifold_fitter_cpp/Makefile
+++ b/manifold_fitter_cpp/Makefile
@@ -22,7 +22,7 @@ INC_FLAGS := $(addprefix -I,$(INC_DIRS))
 
 # The -MMD and -MP flags together generate Makefiles for us!
 # These files will have .d instead of .o as the output.
-CPPFLAGS := $(INC_FLAGS) -MMD -MP -std=gnu++17 -Wall -Werror -lm -ggdb -O3
+CPPFLAGS := $(INC_FLAGS) -MMD -MP -std=gnu++17 -Wall -Werror -lm -ggdb -O3 -march=native
 
 # The final build step.
 $(BUILD_DIR)/$(TARGET_EXEC): $(OBJS)
